# msal_streamlit_authentication

./: .env  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_and_release.yml
docs/: description.txt
example/: Dockerfile
example/app/: dashboard.py
example/local/: Makefile  README.md  pyproject.toml
example/ploomber/: .env.example  README.md  app.py  requirements.txt
msal_authentication/: __init__.py
msal_authentication/frontend/: index.html  package-lock.json  package.json  vite.config.ts
msal_authentication/frontend/src/: Authentication.tsx  main.tsx
msal_authentication/frontend/src/auth/: msal-auth.tsx
msal_streamlit_authentication/: __init__.py  main.py
msal_streamlit_authentication/frontend/: package-lock.json  package.json
msal_streamlit_authentication/frontend/src/: Authentication.css  Authentication.tsx  index.css
msal_streamlit_authentication/frontend/src/auth/: msal-auth.tsx
