[tool.poetry]
name = "streamlit-msal-dashboard"
version = "1.0.1"
description = ""
authors = ["Michael Staal-Olsen"]
packages=[{ include="app"},]

[tool.poetry.dependencies]
python = ">=3.9.12,<=3.12"
streamlit = "*"
msal-streamlit-authentication="1.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
